--- a/views/home/index.html
+++ b/views/home/index.html
@@ -18,80 +18,72 @@
         </ul>
       </div>
     </nav>
+
     <div class="container">
       <h1>Submit an Order</h1>
 
-<!-- {{#prices}}
-<div class="house">
-  <a href="/houses/{{ id }}">{{shirt_style}}</a>
-    <img src="{{img_url}}" alt="" class="house">
-</div>
-{{/prices}} -->
-
-
-
-      <form action='/' method='POST' class="col s6 offset-s1">
+      <form id="form" action='/' method='POST' class="col s6 offset-s1">
         <div class="z-depth-5 #ffffff white">
          <h4 class="card-panel teal lighten-2">Contact</h4>
-
+         <br>
           <div class="row">
-            <div class="input-field col s6 offset-s3">
+            <div class="input-field col s4 offset-s4">
               <span class="flow-text">
               <input id="first_name" type="text" class="validate" name="contact_name">
-              <label for="first_name">Contact Name</label>
+              <label class="active" for="first_name">Contact Name</label>
               </span>
             </div>
           </div>
 
           <div class="row">
-            <div class="input-field col s6 offset-s3">
+            <div class="input-field col s4 offset-s4">
               <span class="flow-text">
               <input id="first_name" type="text" class="validate" name="contact_name">
-              <label for="first_name">Email</label>
+              <label class="active" for="first_name">Email</label>
               </span>
             </div>
           </div>
 
           <div class="row">
-            <div class="input-field col s3 offset-s2">
+            <div class="input-field col s2 offset-s4">
               <input id="last_name" type="text" class="validate" name="phone">
-              <label for="last_name">Phone Number</label>
+              <label class="active" for="last_name">Phone Number</label>
             </div>
            <div class="input-field col s2 ">
               <input type="date" class="datepicker" name="due_date">
-              <label for="password"></label>
+              <label class="active" for="last_name"><span class="dueDateLeft">Due Date</span></label>
             </div>
           </div>
-
-
           <div class="row">
-
-            <div class="input-field col s3 offset-s2">
-              <input id="street" type="text" class="validate" name="street">
-              <label for="last_name">street number</label>
-            </div>
-           <div class="input-field col s2 ">
-              <input id="city" type="text" class="validate" name="city">
-              <label for="city"></label>
-            </div>
-            <div class="row">
-              <div class="input-field col s2 ">
-                <input id="state" type="text" class="validate" name="state">
-
-              <label for="city"></label>
-            </div>
-            </div>
+          <div class="input-field col s5 offset-s5">
+          <p>
+            <input type="checkbox" id="test6"/>
+            <label for="test6">Pick-Up</label>
+            </p>
+            <p>
+            <input type="checkbox" id="test7"/>
+            <label for="test7">Ship</label>
+          </p>
           </div>
+          </div>
+          <br>
+          <br>
+          <div class="row">
+            <div id="getaddress" onclick="getLocation() ">Use Current Address</div>
+              <div class="input-field col s4 offset-s4">
+               <input id="street" type="text" class="validate" name="street">
+               <label for="last_name"><p id="show"></p></label>
+              </div>
+            </div>
 
         <h5 class="card-panel teal lighten-2">Order</h5>
-
          <div class="row">
-            <div class="input-field col s6 offset-s3">
+            <div class="input-field col s5 offset-s3">
               <p>
              <input name="style" type="radio" id="test1" value="T-shirt" />
               <label for="test1">T-shirt </label>
               <input name="style" type="radio" id="test2" value="Long Sleeve"/>
-              <label for="test2">Long Sleeve T-shirt </label>
+              <label for="test2">Long Sleeve</label>
               <input name="style" type="radio" id="test3" value="Hoodie"/>
               <label for="test3"> Hoodie </label>
               <input name="style" type="radio" id="test4" value="Crew Neck" />
@@ -101,62 +93,374 @@
           </div>
 
           <div class="row">
-            <div class="input-field col s6 offset-s3">
+            <div class="input-field col s4 offset-s4">
               <span class="flow-text">
                 <input id="password" type="password" class="validate" name="shirt_name">
-                <label for="password">Shirt Name</label>
+                <label for="password">Shirt Title</label>
               </span>
             </div>
           </div>
 
 
           <div class="row">
-            <div class="input-field col s4 offset-s2">
-              <input id="password" type="password" class="validate" name="front_color">
-              <label for="password">Front Colors:</label>
+            <div class="input-field col s1 offset-s4">
+                  <select class="validate" name="front_color">
+                    <option value="" disabled selected>1</option>
+                    <option value="1">1</option>
+                    <option value="2">2</option>
+                    <option value="3">3</option>
+                  </select>
+                  <label for="password">Front Colors:</label>
             </div>
-            <div class="input-field col s4">
-              <input id="password" type="password" class="validate" name="back_color">
-              <label for="password">Back Colors:</label>
+
+            <div class="input-field col s1">
+              <select class="validate" name="back_color">
+                    <option value="" disabled selected>0</option>
+                    <option value="1">1</option>
+                    <option value="2">2</option>
+                    <option value="3">3</option>
+              </select>
+              <label for="password">back Colors:</label>
+            </div>
+
+            <div class="input-field col s1">
+              <select class="validate" name="sleeve_color">
+                    <option value="" disabled selected>0</option>
+                    <option value="1">1</option>
+                    <option value="2">2</option>
+                    <option value="3">3</option>
+              </select>
+              <label for="password">Sleve Prints:</label>
+            </div>
+
+          <div class="row">
+            <div class="input-field col s4 offset-s4">
+              <span class="flow-text">
+                <input id="password" type="password" class="validate" name="app_color">
+                <label for="password">Apparel Color</label>
+              </span>
             </div>
           </div>
 
-          <div class="row">
-            <div class="input-field col s12">
-              <input id="password" type="password" class="validate" name="app_color">
-              <label for="password">Apparel Color</label>
-            </div>
-          </div>
 
           <div class="row">
-            <div class="input-field col s12">
-              <input id="password" type="password" class="validate" name="quanity">
+            <div class="input-field col s4 offset-s4">
               <label for="password">Quanity</label>
+              <p class="range-field">
+              <input name="quanity" type="range" id="test5" min="25" max="500" />
+              </p>
             </div>
           </div>
-  <div class="row">
-  </div>
           <div class="row">
-            <div class="input-field col s12">
-              <input id="password" type="password" class="validate" name="img_url">
-              <label for="password">Quanity</label>
+            <div class="input-field col s1 offset-s4">
+                  <select class="validate" name="front_color">
+                    <option value="" disabled selected>0</option>
+                    <option value="1">1</option>
+                    <option value="2">2</option>
+                    <option value="3">3</option>
+                  </select>
+                  <label for="password">Small</label>
             </div>
-          </div>
+
+            <div class="input-field col s1">
+              <select class="validate" name="back_color">
+                    <option value="" disabled selected>0</option>
+                    <option value="1">1</option>
+                    <option value="2">2</option>
+                    <option value="3">3</option>
+              </select>
+              <label for="password">Medium</label>
+            </div>
+
+            <div class="input-field col s1">
+              <select class="validate" name="sleeve_color">
+                    <option value="" disabled selected>0</option>
+                    <option value="1">1</option>
+                    <option value="2">2</option>
+                    <option value="3">3</option>
+              </select>
+              <label for="password">Large</label>
+            </div>
+                <div class="input-field col s1">
+              <select class="validate" name="back_color">
+                    <option value="" disabled selected>0</option>
+                    <option value="1">1</option>
+                    <option value="2">2</option>
+                    <option value="3">3</option>
+              </select>
+              <label for="password">XL</label>
+            </div>
+
+            <div class="input-field col s1">
+              <select class="validate" name="sleeve_color">
+                    <option value="" disabled selected>0</option>
+                    <option value="1">1</option>
+                    <option value="2">2</option>
+                    <option value="3">3</option>
+              </select>
+              <label for="password">2XL</label>
+            </div>
+
+
+          <div class="row">
+             <div class="file-field input-field col s4 offset-s4">
+              <div class="btn">
+                <span>File</span>
+                <input type="file">
+              </div>
+              <div class="file-path-wrapper">
+                <input class="file-path validate" type="text">
+              </div>
+            </div>
+
+          <div class="row">
+             <div class="file-field input-field col s4 offset-s4">
+           <button id="more_button"> Add more shirts</button>
            <button id="submit_button" type="submit"> submit</button>
+           </div>
+           </div>
+
+
+
+
+<!-- more 1 starts here -->
+<div id="hide">
+         <h4 class="card-panel teal lighten-2">Contact</h4>
+         <br>
+          <div class="row">
+            <div class="input-field col s4 offset-s4">
+              <span class="flow-text">
+              <input id="first_name" type="text" class="validate" name="contact_name">
+              <label class="active" for="first_name">Contact Name</label>
+              </span>
+            </div>
+          </div>
+
+          <div class="row">
+            <div class="input-field col s4 offset-s4">
+              <span class="flow-text">
+              <input id="first_name" type="text" class="validate" name="contact_name">
+              <label class="active" for="first_name">Email</label>
+              </span>
+            </div>
+          </div>
+
+          <div class="row">
+            <div class="input-field col s2 offset-s4">
+              <input id="last_name" type="text" class="validate" name="phone">
+              <label class="active" for="last_name">Phone Number</label>
+            </div>
+           <div class="input-field col s2 ">
+              <input type="date" class="datepicker" name="due_date">
+              <label class="active" for="last_name"><span class="dueDateLeft">Due Date</span></label>
+            </div>
+          </div>
+          <div class="row">
+          <div class="input-field col s5 offset-s5">
+          <p>
+            <input type="checkbox" id="test6"/>
+            <label for="test6">Pick-Up</label>
+            </p>
+            <p>
+            <input type="checkbox" id="test7"/>
+            <label for="test7">Ship</label>
+          </p>
+          </div>
+          </div>
+          <br>
+          <br>
+          <div class="row">
+            <div id="getaddress" onclick="getLocation() ">Use Current Address</div>
+              <div class="input-field col s4 offset-s4">
+               <input id="street" type="text" class="validate" name="street">
+               <label for="last_name"><p id="show"></p></label>
+              </div>
+            </div>
+
+        <h5 class="card-panel teal lighten-2">Order</h5>
+         <div class="row">
+            <div class="input-field col s5 offset-s3">
+              <p>
+             <input name="style" type="radio" id="test1" value="T-shirt" />
+              <label for="test1">T-shirt </label>
+              <input name="style" type="radio" id="test2" value="Long Sleeve"/>
+              <label for="test2">Long Sleeve</label>
+              <input name="style" type="radio" id="test3" value="Hoodie"/>
+              <label for="test3"> Hoodie </label>
+              <input name="style" type="radio" id="test4" value="Crew Neck" />
+              <label for="test4">Crew Neck </label>
+              </p>
+            </div>
+          </div>
+
+          <div class="row">
+            <div class="input-field col s4 offset-s4">
+              <span class="flow-text">
+                <input id="password" type="password" class="validate" name="shirt_name">
+                <label for="password">Shirt Title</label>
+              </span>
+            </div>
+          </div>
+
+
+          <div class="row">
+            <div class="input-field col s1 offset-s4">
+                  <select class="validate" name="front_color">
+                    <option value="" disabled selected>1</option>
+                    <option value="1">1</option>
+                    <option value="2">2</option>
+                    <option value="3">3</option>
+                  </select>
+                  <label for="password">Front Colors:</label>
+            </div>
+
+            <div class="input-field col s1">
+              <select class="validate" name="back_color">
+                    <option value="" disabled selected>0</option>
+                    <option value="1">1</option>
+                    <option value="2">2</option>
+                    <option value="3">3</option>
+              </select>
+              <label for="password">back Colors:</label>
+            </div>
+
+            <div class="input-field col s1">
+              <select class="validate" name="sleeve_color">
+                    <option value="" disabled selected>0</option>
+                    <option value="1">1</option>
+                    <option value="2">2</option>
+                    <option value="3">3</option>
+              </select>
+              <label for="password">Sleve Prints:</label>
+            </div>
+
+          <div class="row">
+            <div class="input-field col s4 offset-s4">
+              <span class="flow-text">
+                <input id="password" type="password" class="validate" name="app_color">
+                <label for="password">Apparel Color</label>
+              </span>
+            </div>
+          </div>
+
+
+          <div class="row">
+            <div class="input-field col s4 offset-s4">
+              <label for="password">Quanity</label>
+              <p class="range-field">
+              <input name="quanity" type="range" id="test5" min="25" max="500" />
+              </p>
+            </div>
+          </div>
+          <div class="row">
+            <div class="input-field col s1 offset-s4">
+                  <select class="validate" name="front_color">
+                    <option value="" disabled selected>0</option>
+                    <option value="1">1</option>
+                    <option value="2">2</option>
+                    <option value="3">3</option>
+                  </select>
+                  <label for="password">Small</label>
+            </div>
+
+            <div class="input-field col s1">
+              <select class="validate" name="back_color">
+                    <option value="" disabled selected>0</option>
+                    <option value="1">1</option>
+                    <option value="2">2</option>
+                    <option value="3">3</option>
+              </select>
+              <label for="password">Medium</label>
+            </div>
+
+            <div class="input-field col s1">
+              <select class="validate" name="sleeve_color">
+                    <option value="" disabled selected>0</option>
+                    <option value="1">1</option>
+                    <option value="2">2</option>
+                    <option value="3">3</option>
+              </select>
+              <label for="password">Large</label>
+            </div>
+                <div class="input-field col s1">
+              <select class="validate" name="back_color">
+                    <option value="" disabled selected>0</option>
+                    <option value="1">1</option>
+                    <option value="2">2</option>
+                    <option value="3">3</option>
+              </select>
+              <label for="password">XL</label>
+            </div>
+
+            <div class="input-field col s1">
+              <select class="validate" name="sleeve_color">
+                    <option value="" disabled selected>0</option>
+                    <option value="1">1</option>
+                    <option value="2">2</option>
+                    <option value="3">3</option>
+              </select>
+              <label for="password">2XL</label>
+            </div>
+
+
+          <div class="row">
+             <div class="file-field input-field col s4 offset-s4">
+              <div class="btn">
+                <span>File</span>
+                <input type="file">
+              </div>
+              <div class="file-path-wrapper">
+                <input class="file-path validate" type="text">
+              </div>
+            </div>
+
+          <div class="row">
+             <div class="file-field input-field col s4 offset-s4">
+           <button id="more2_button"> Add again shirts</button>
+           <button id="submit_button" type="submit"> submit</button>
+           </div>
+           </div>
+           </div>
  <br><br>
+<!-- 1 ends -->
+
+<!-- more 2 starts here -->
+<div id="hide2">
+         <h4 class="card-panel teal lighten-2">Contact</h4>
+         <br>
+          <div class="row">
+            <div class="input-field col s4 offset-s4">
+              <span class="flow-text">
+              <input id="first_name" type="text" class="validate" name="contact_name">
+              <label class="active" for="first_name">Contact Name</label>
+              </span>
+            </div>
+          </div>
+
+
+
+          <div class="row">
+             <div class="file-field input-field col s4 offset-s4">
+           <button id="more3_button">something else</button>
+           <button id="submit_button" type="submit"> submit</button>
+           </div>
+           </div>
+</div>
+ <br><br>
+<!-- 2ends -->
+
         </div>
       </form>
 
-<button onclick="getLocation()">Try It</button>
-
-<p id="demo"></p>
 
 
   </div>
+
 <!--   <img src="images/dante.jpg" alt="Mountain View" id="bg"> -->
 
   <script src="script/jquery.js"></script>
-  <script src="script/script.js"></script>
+  <script type="text/javascript" src="script/materialize.js"></script>
+    <script src="script/script.js"></script>
   </body>
 </html>
 
