--- a/public/style/style.css
+++ b/public/style/style.css
@@ -5,14 +5,14 @@ body {
   background-color: #F5F5F5 ;
 }
 #bg{
-  position: absolute;
+
   opacity: .09;
   width: 100%;
   height: auto;
   background-repeat: no-repeat;
   background-size: cover;
   background background-attachment: fixed;
-  margin-top: -680px;
+  margin-top: -2500px;
   left: 0%;
   z-index: -1;
 }
@@ -30,3 +30,7 @@ body {
 #hide3 {
   display: none;
 }
+#please{
+  width: 100%;
+}
+
