--- a/views/index.html
+++ b/views/index.html
@@ -237,7 +237,7 @@
               <div class="btn">
                 <span>File</span>
 
-                <input name="img_url" type="file">
+                <input id="fill_button"name="img_url" type="file">
               </div>
               <div class="file-path-wrapper">
                 <input class="file-path validate" type="text" name="img_url"value="">
@@ -249,14 +249,15 @@
              <div class="file-field input-field col s4 offset-s4">
            <button id="more_button"> Add more shirts</button>
            <button id="submit_button" type="submit"> submit</button>
+
            </div>
            </div>
         </div>
       </form>
   </div>
 
-<!--   <img src="images/dante.jpg" alt="Mountain View" id="bg"> -->
-
+<!--   <img src="images/dante.jpg" alt="Mountain View" id="bg">
+ -->
   <script src="script/jquery.js"></script>
   <script type="text/javascript" src="script/materialize.js"></script>
     <script src="script/script.js"></script>
