--- a/views/confirm/index.html
+++ b/views/confirm/index.html
@@ -22,8 +22,10 @@
 
 
  <div class="container">
-      <h1>Confirm an Order</h1>
 
+
+      <h1>Confirm an Order</h1>
+ <img id="imageContainer" onload="loadImage()" src="">
 <div id="b"></div>
 this is working<br>
 {{#orders}}
@@ -64,7 +66,7 @@ Img Url: {{img_url}}<br>
     <input type="text" name="md" value="md">
     <input type="text" name="lg" value="lg">
     <input type="text" name="xl" value="xl">
-    <input type="text" name="twoxl" value="">
+    <input type="text" name="twoxl" value="twoxl">
     <input type="text" name="img_url" value="img_url">
    <button type="submit"> submit</button>
 </form>
