--- a/views/confirm/index.html
+++ b/views/confirm/index.html
@@ -6,7 +6,6 @@
 <link rel="stylesheet" type="text/css" href="style/style.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.1/css/materialize.min.css">
 <script src="https://www.google.com/jsapi?key=AIzaSyAagP8OMcTFjv1Fiz08bfMmL0SirqzMx7E" type="text/javascript"></script>
-
 <body>
     <nav>
       <div class="nav-wrapper">
@@ -20,15 +19,41 @@
       </div>
     </nav>
 
-
  <div class="container">
+  <h1>Confirm an Order</h1>
+  <div id="b"></div>
+{{#users}}
+<form action="/users/update/{{id}}?_method=PUT" method='post'>
+{{name}}
+    <input type="text" name="name" value="name">
+{{/users}}
+   <button class="#ffebee red lighten-5" type="submit"> submit</button>
+
+</form>
 
 
-      <h1>Confirm an Order</h1>
- <img id="imageContainer" onload="loadImage()" src="">
-<div id="b"></div>
-this is working<br>
-{{#orders}}
+
+
+
+
+
+
+<!--
+    <input type="hidden" name="_next" value="http://localhost:3000"/>
+    <input type="text" name="_gotcha" style="display:none" />
+    <input type="hidden" name="_subject" value="New Order!" />
+    <input type="hidden" name="_format" value="plain" />
+    <input id="nameN" type="text" name="name" value="Name: {{contact_name}}">
+    <input type="text" name="phone" value="Phone: {{phone}}">
+    <input type="text" name="due_date" value="Due Date: {{due_date}}">
+    <input type="text" name="ship" value="Pick-up/Ship: {{ship}}">
+    <input type="text" name="email" value="email: {{email}}">
+    <input type="text" name="address" value="email: {{address}}">
+
+
+<input type="email" name="_replyto" value="{{email}}">
+
+
 Contact Name: {{contact_name}}<br>
 Phone: {{phone}}<br>
 Due date: {{due_date}}<br>
@@ -47,9 +72,8 @@ Large: {{lg}}<br>
 XL: {{xl}}<br>
 2XL: {{twoxl}}<br>
 Img Url: {{img_url}}<br>
-<p class="total"> Total:</p>
 
-<form action='/post/{{id}}?_method=PUT' method='post'>
+
     <input type="text" name="contact_name" value="contact">
     <input type="text" name="phone" value="phone">
     <input type="text" name="due_date" value="due_date">
@@ -71,16 +95,18 @@ Img Url: {{img_url}}<br>
    <button type="submit"> submit</button>
 </form>
 
-
-
-
-<form action='/post/{{id}}?_method=DELETE' method='post'>
+ -->
+{{#users}}
+<form action='/users/delete/{{id}}?_method=DELETE' method='post'>
 
    <input type="text" name="style" value="style">
    <button type="submit"> Delete</button>
+{{/users}}
 </form>
 
-{{/orders}}
+
+
+
 </div>
  <script src="script/jquery.js"></script>
   <script type="text/javascript" src="script/materialize.js"></script>
