--- a/views/signup/index.html
+++ b/views/signup/index.html
@@ -1,26 +1,20 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <title></title>
-</head>
-<body>
-sign up page
+
 <!doctype html>
 <html>
   <head>
-    <link href="/css/bootstrap.min.css" rel="stylesheet" type="text/css">
-    <link href="/css/style.css" rel="stylesheet" type="text/css">
-    <link href='https://fonts.googleapis.com/css?family=Rye' rel='stylesheet' type='text/css'>
-  </head>
+  <link rel="stylesheet" type="text/css" href="style/style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.1/css/materialize.min.css">
+  <script src="https://www.google.com/jsapi?key=AIzaSyAagP8OMcTFjv1Fiz08bfMmL0SirqzMx7E" type="text/javascript"></script>
+</head>
   <body>
-    <div class="main-container">
-      <div class="border-container">
-        <h1>Super Secure Signup Page</h1>
-        <div class="col-lg-6 center-block">
-          <div class="well bs-component">
+      <div class="container">
+       <div class="z-depth-5 #ffffff white">
+         <h4 class="card-panel #ef5350 red lighten-1">Submit an Order</h4>
+
             <form class="form-horizontal" action="/signup" method="post">
               <fieldset>
                 <legend>Sign Up</legend>
+                <img id="b" src="" alt="">
                 <div class="form-group">
                   <label for="inputEmail" class="col-lg-2 control-label">Email</label>
                   <div class="col-lg-10">
@@ -34,6 +28,12 @@ sign up page
                   </div>
                 </div>
                 <div class="form-group">
+                  <label for="inputPassword" class="col-lg-2 control-label">Name</label>
+                  <div class="col-lg-10">
+                    <input name="name" type="text" class="form-control" id="inputPassword" placeholder="Name">
+                  </div>
+                </div>
+                <div class="form-group">
                   <div class="col-lg-10 col-lg-offset-2">
                     <button type="submit" class="btn btn-primary">Join!</button>
                   </div>
@@ -43,7 +43,10 @@ sign up page
           </div>
         </div>
       </div>
-    </div>
+        <script src="script/jquery.js"></script>
+  <script type="text/javascript" src="script/materialize.js"></script>
+    <script src="script/script.js"></script>
+
   </body>
 </html>
 
